<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/lblNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/lblNum" />
                <EditText
                    android:id="@+id/txtNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/lblNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/lblNombre"
                    />
                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                </EditText>
                <TextView
                    android:id="@+id/lblEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/lblEdad"
                    />
                <EditText
                    android:id="@+id/txtEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                </EditText>
                <TextView
                    android:id="@+id/lblPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/lblPrecio" />
                <EditText
                    android:id="@+id/txtPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/lblViaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/lblViaje" />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/rbSencillo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sencillo"
                        ></RadioButton>
                    <RadioButton
                        android:id="@+id/rbDoble"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Doble"
                        ></RadioButton>
                </RadioGroup>
                <TextView
                    android:id="@+id/lblPaises"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblPaises"
                    android:gravity="center"
                    />
                <Spinner
                    android:id="@+id/spnPaises"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ></Spinner>
                <TextView
                    android:id="@+id/lblFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblFecha"
                    android:gravity="center"
                    />
                <EditText
                    android:id="@+id/txtFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnEnviar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Enviar informacion"
                    >
                </Button>
                <TextView
                    android:id="@+id/lblBoletoDatos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ></TextView>
                <Button
                    android:id="@+id/btnLimpiar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Limpiar datos" />
                <Button
                    android:id="@+id/btnCerrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cerrar" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>